corrected edit link on index page

--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Oh yeahhhh add Crazy Car</h1>
+<h1>Oh yeahhhh add another Crazy Car</h1>
 <%= link_to "home", root_path %>
 
 <%= form_for @new_car do |f| %>
