--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 		<%= car.year %>
 		<%= car.color %>
 		<%= link_to "Show", car_path(car) %>
-		<%= link_to "Edit", car_path(car) %>
+		<%= link_to "Edit", edit_car_path(car) %>
 	</li>
 <% end %>
 </ul>
